# coffee_ai

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml  pages.yml
api/: server.py
research/: DATA_ROADMAP.md  export_results.py  flavor_wheel.py  ingest.py  prepare.py  prepare_v2.py  program.md  pyproject.toml  run_experiments.py  train.py  train_configurable.py  train_v2.py  validate_data.py
research/data/: beans.json  brew_schema.json  grinder_calibration.json  schema.json
site/: index.html
site/css/: style.css
site/data/: beans_summary.json  model.json  results.json
site/js/: app.js  charts.js  data.js  i18n.js  scoring.js
tests/: conftest.py  test_api_integration.py  test_data_consistency.py  test_model_predictions.py  test_prepare_v2.py  test_server.py
