[project]
name = "coffee-autoresearch"
version = "0.1.0"
description = "Autonomous specialty coffee attribution research"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
